# Cyberwerewolf_killing

./: .gitignore  GEMINI.md  LOCAL_DEVELOPMENT.md  Makefile  README.md  STARTUP_GUIDE.md  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  quick-start.sh  setup.sh
apps/agents/: Dockerfile  agent_manager.py  config.py  main.py  pyproject.toml  requirements.txt
apps/agents/agents/: __init__.py  gm_agent.py  guard_agent.py  hunter_agent.py  idiot_agent.py  seer_agent.py  villager_agent.py  werewolf_agent.py  witch_agent.py
apps/agents/tools/: game_tools.py
apps/api/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt  test.db
apps/api/app/: __init__.py  config.py  database.py  main.py  path_config.py  websocket_manager.py
apps/api/app/agent/: __init__.py  context_builder.py  tools_service.py
apps/api/app/game/: __init__.py  event_sourcing.py  game_service.py  state_machine.py
apps/api/app/routers/: admin.py  agent_tools.py  auth.py  game_actions.py  llm_admin.py  llm_config.py  rooms.py
apps/api/tests/: __init__.py  conftest.py  test_agent_context.py  test_auth.py  test_event_sourcing.py  test_game_state.py  test_rooms.py
apps/web/: .gitignore  Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/websocket-gateway/: Dockerfile  main.py  requirements.txt
docs/: Baseline.md
docs/details/: contents.md
scripts/: start-agents.bat  start-agents.sh  start-api.bat  start-api.sh  start-infra.bat  start-infra.sh  start-web.bat  start-web.sh
(+69 files in other folders)
